tests/tests/test_runs/snapshots/test_runs__scalar_3l_cross_section_inspects__scalar_3l_cross_section_gl43_q7_squared_numerator_uv_on_threshold_on.snap
---
source: tests/tests/test_runs/scalar_3L_cross_section_inspects.rs
expression: "format!(\"re = {:.17e}\\nim = {:.17e}\", weight.re, weight.im)"
---
re = 1.62047022631774895e-11
im = 2.68388331724116645e-27
